--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-2": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.3.13",
     "cross-env": "^1.0.7",
     "expect": "^1.8.0",
@@ -43,6 +43,7 @@
     "jsdom": "^5.6.1",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
+    "ramda": "^0.21.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.0.1",
     "style-loader": "^0.12.3",
